--- a/sass/_third-section.scss
+++ b/sass/_third-section.scss
@@ -10,7 +10,11 @@
         margin: 40px 0;
         width: 100%;
         text-align: center;
-        padding: 0 30px;
+        padding: 15px 30px;
+    }
+
+    &__i {
+        font-size: 2.4rem;
     }
 
     &__h2 {
