--- a/sass/_basis.scss
+++ b/sass/_basis.scss
@@ -13,3 +13,10 @@ body {
     font-size: 20px;
     color: $main-color-theme;
 }
+
+.container {
+    min-width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    overflow: hidden;
+}
